# it-quiz

./: .dockerignore  .env.template  Dockerfile  docker-compose.yaml  pyproject.toml
app/: database.py  main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: answers.py  categories.py  difficulties.py  questions.py  quiz.py  user.py
app/core/: config.py  security.py
app/crud/: quiz.py  user.py
app/middleware/: logger.py
app/models/: __init__.py  answers.py  base.py  categories.py  questions.py  quiz.py  user.py  user_responses.py
app/repositories/: __init__.py  answer_repository.py  base.py  category_repository.py  question_repository.py  user_repository.py  user_response_repository.py
app/schemas/: answers.py  categories.py  questions.py  quiz.py  user.py
app/services/: answer_service.py  category_service.py  difficulty_service.py  question_service.py  quiz_service.py  user_response_service.py  user_service.py
app/shared/exceptions/: base.py  categories.py  database.py  questions.py
app/tests/: conftest.py  test_category_service.py
app/utils/: faker_seed.py
