[project]
name = "quizz"
version = "0.1.0"
description = "IT quiz game"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.0",
    "alembic==1.17.2",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "asyncpg==0.31.0",
    "bcrypt==4.3.0",
    "black==23.12.1",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "faker==38.2.0",
    "fastapi==0.124.2",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.25.2",
    "idna==3.11",
    "iniconfig==2.3.0",
    "librt==0.7.3",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "mypy==1.19.0",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "passlib==1.7.4",
    "pathspec==0.12.1",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pytest==7.4.4",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio==0.21.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.6",
    "pyyaml==6.0.3",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.45",
    "starlette==0.50.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "uvicorn==0.38.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
]
